--- a/OnlineShopping_MongodbService/package.json
+++ b/OnlineShopping_MongodbService/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.1",
     "jquery": "^3.6.0",
     "jsdom": "^20.0.0",
+    "mongodb": "^6.4.0",
     "mongoose": "^6.4.0",
     "node-fetch": "2.0"
   },
