--- a/OnlineShopping/app/src/main/AndroidManifest.xml
+++ b/OnlineShopping/app/src/main/AndroidManifest.xml
@@ -3,8 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
-<!--    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />-->
-
 
     <application
         android:name=".ShoppingApplication"
@@ -13,18 +11,19 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Onlineshop"
-        android:networkSecurityConfig="@xml/network_security_config"
-        tools:targetApi="31" >
-
+        tools:targetApi="31">
+        <activity
+            android:name=".activities.ShoppingActivity"
+            android:exported="false" />
         <activity
             android:name=".activities.LoginActivity"
             android:exported="false" />
-
         <activity
-            android:name=".activities.ShoppingActivity"
+            android:name=".activities.UploadImageActivity"
             android:exported="true"
             android:label="@string/app_name">
             <intent-filter>
