--- a/OnlineShopping/app/src/main/AndroidManifest.xml
+++ b/OnlineShopping/app/src/main/AndroidManifest.xml
@@ -15,15 +15,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Onlineshop"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
+
+        <activity
+            android:name=".activities.UploadImageActivity"
+            android:exported="false" />
         <activity
             android:name=".activities.ShoppingActivity"
             android:exported="false" />
         <activity
             android:name=".activities.LoginActivity"
-            android:exported="false" />
-        <activity
-            android:name=".activities.UploadImageActivity"
             android:exported="true"
             android:label="@string/app_name">
             <intent-filter>
