--- a/Learning/app/src/main/AndroidManifest.xml
+++ b/Learning/app/src/main/AndroidManifest.xml
@@ -13,13 +13,31 @@
         android:theme="@style/Theme.Learning"
         tools:targetApi="31">
         <activity
-            android:name=".ComposeArticleActivity"
+            android:name=".diceroller.LemonadeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".diceroller.DiceRollerActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".BusinessCardActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Quadrant"
+            android:exported="false" />
+        <activity
+            android:name=".TaskManager"
+            android:exported="false" />
+        <activity
+            android:name=".ComposeArticleActivity"
+            android:exported="false" />
+        <activity
+            android:name=".stateincompose.StateComposeActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Learning">
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
