--- a/Learning/app/src/main/AndroidManifest.xml
+++ b/Learning/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Learning"
         tools:targetApi="31">
         <activity
+            android:name=".dessertclicker.DessertClickerAppActivity"
+            android:exported="false" />
+        <activity
+            android:name=".days30app.Days30AppActivity"
+            android:exported="false" />
+        <activity
             android:name=".superheroes.SuperHeroesAppActivity"
             android:exported="false" />
         <activity
@@ -52,7 +58,7 @@
             android:name=".ComposeArticleActivity"
             android:exported="false" />
         <activity
-            android:name=".days30app.Days30AppActivity"
+            android:name=".unscramble.AnscrambleAppActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Woof">
