--- a/Learning/app/src/main/AndroidManifest.xml
+++ b/Learning/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Learning"
         tools:targetApi="31">
         <activity
+            android:name=".unscramble.AnscrambleAppActivity"
+            android:exported="false" />
+        <activity
             android:name=".dessertclicker.DessertClickerAppActivity"
             android:exported="false" />
         <activity
@@ -58,7 +61,7 @@
             android:name=".ComposeArticleActivity"
             android:exported="false" />
         <activity
-            android:name=".unscramble.AnscrambleAppActivity"
+            android:name=".cupcake.CupcakeAppActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Woof">
