--- a/FHIRApplication/app/src/main/AndroidManifest.xml
+++ b/FHIRApplication/app/src/main/AndroidManifest.xml
@@ -4,6 +4,9 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+<!--    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />-->
+<!--    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />-->
+
     <!--        android:dataExtractionRules="@xml/data_extraction_rules"-->
     <!--        android:fullBackupContent="@xml/backup_rules"-->
     <!--        android:icon="@mipmap/ic_launcher"-->
@@ -14,7 +17,8 @@
         android:name=".FhirApplication"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:theme="@style/Theme.FHIRApplication"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
