--- a/FHIRApplication/app/src/main/AndroidManifest.xml
+++ b/FHIRApplication/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
     <!--        android:supportsRtl="true"-->
     <application
         android:allowBackup="true"
-        android:name=".di.FhirApplication"
+        android:name=".FhirApplication"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
