--- a/FHIRApplication/app/src/main/assets/application_config.json
+++ b/FHIRApplication/app/src/main/assets/application_config.json
@@ -1,5 +1,6 @@
 {
   "endPoint": "Patient with Medical Care",
+  "appTitle" : "Simple FHIR Demo Application",
   "sync": {
     "resourcesToSync":  [
       "Patient",
