--- a/Learning/app/src/main/AndroidManifest.xml
+++ b/Learning/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Learning"
         tools:targetApi="31">
         <activity
+            android:name=".replyapp.ReplyAppActivity"
+            android:exported="false" />
+        <activity
             android:name=".unscramble.AnscrambleAppActivity"
             android:exported="false" />
         <activity
