--- a/FHIRApplication/app/src/main/assets/application_config.json
+++ b/FHIRApplication/app/src/main/assets/application_config.json
@@ -17,7 +17,8 @@
 
   "carePlan": {
     "planDefinitionId": "1",
-    "activityDefinitionId": "2"
+    "activityDefinitionId": "2",
+    "taskQuestionnaireId": "10"
   },
 
 
